--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,15 @@ layout: default
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
+                <!-- AdSense -->
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({
+                        google_ad_client: "ca-pub-7733659383103857",
+                        enable_page_level_ads: true
+                    });
+                </script>
+
 				{{ content }}
 
                 <hr>
