--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <html lang="en">
 
 {% include head.html %}
