--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,17 @@
         });
     </script>
 
+    <!-- contents_head_ads -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7733659383103857"
+         data-ad-slot="1473006188"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     {% feed_meta %}
 
 </head>
