--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,17 @@ layout: default
 <!-- Post Content -->
 <article>
     <div class="container">
+        <!-- contents_head_ads -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-7733659383103857"
+             data-ad-slot="1473006188"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
