--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,16 @@ layout: default
 
 				{{ content }}
 
+                <ins class="adsbygoogle"
+                     style="display:block; text-align:center;"
+                     data-ad-layout="in-article"
+                     data-ad-format="fluid"
+                     data-ad-client="ca-pub-7733659383103857"
+                     data-ad-slot="5050370686"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+
                 <hr>
 
                 <ul class="pager">
