--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,7 @@ layout: default
 
 				{{ content }}
 
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block; text-align:center;"
                      data-ad-layout="in-article"
