--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,6 +1,6 @@
 // pygments-css (https://github.com/richleland/pygments-css)
 
-.hll { background-color: #ffffcc }
+.hll { background-color: #000000 }
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .k { color: #000000; font-weight: bold } /* Keyword */
