--- a/_sass/type-theme.scss
+++ b/_sass/type-theme.scss
@@ -1,6 +1,7 @@
 // External
 @import 'external/reset';
-@import 'external/syntax';
+//@import 'external/syntax';
+@import 'external/fruity';
 
 // Base
 @import 'base/variables';
