--- a/_sass/external/_fruity.scss
+++ b/_sass/external/_fruity.scss
@@ -1,7 +1,7 @@
 // pygments-css (https://github.com/richleland/pygments-css)
 
 .hll { background-color: #333333 }
-{ background: #111111; color: #ffffff }
+.highlight { background: #111111; color: #ffffff }
 .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
 .err { color: #ffffff } /* Error */
 .esc { color: #ffffff } /* Escape */
