--- a/_sass/external/_fruity.scss
+++ b/_sass/external/_fruity.scss
@@ -1,7 +1,7 @@
 // pygments-css (https://github.com/richleland/pygments-css)
 
 .hll { background-color: #333333 }
-.highlight { background: #111111; color: #ffffff; padding: 0.25rem 0.25rem 0.25rem 0.25rem }
+.highlight { background: #111111; color: #ffffff; padding: .2rem .2rem .2rem .2rem; border-radius: .2rem}
 .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
 .err { color: #ffffff } /* Error */
 .esc { color: #ffffff } /* Escape */
