--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,71 +1,213 @@
-// pygments-css (https://github.com/richleland/pygments-css)
-
-.hll { background-color: #ffffcc }
-{ background: #f8f8f8; }
-.c { color: #6a737d } /* Comment */
-.err {  } /* Error */
-.k { color: #d73a49 } /* Keyword */
-.o { } /* Operator */
-.ch { color: #6a737d } /* Comment.Hashbang */
-.cm { color: #6a737d } /* Comment.Multiline */
-.cp { color: #d73a49 } /* Comment.Preproc */
-.cpf { color: #032f62 } /* Comment.PreprocFile */
-.c1 { color: #6a737d } /* Comment.Single */
-.cs { color: #6a737d } /* Comment.Special */
-.gd { color: #b31d28; background-color: #ffeef0 } /* Generic.Deleted */
-.ge {  } /* Generic.Emph */
-.gr {  } /* Generic.Error */
-.gh { color: #005cc5 } /* Generic.Heading */
-.gi { color: #22863a; background-color: #f0fff4 } /* Generic.Inserted */
-.go {  } /* Generic.Output */
-.gp {  } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #6f42c1; font-weight: bold } /* Generic.Subheading */
-.gt { color: #0044DD } /* Generic.Traceback */
-.kc { color: #005cc5 } /* Keyword.Constant */
-.kd { color: #d73a49 } /* Keyword.Declaration */
-.kn { color: #d73a49 } /* Keyword.Namespace */
-.kp { color: #d73a49 } /* Keyword.Pseudo */
-.kr { color: #d73a49 } /* Keyword.Reserved */
-.kt { color: #d73a49 } /* Keyword.Type */
-.m { color: #666666 } /* Literal.Number */
-.s { color: #032f62 } /* Literal.String */
-.na { } /* Name.Attribute */
-.nb { color: #005cc5 } /* Name.Builtin */
-.nc { color: #6f42c1 } /* Name.Class */
-.no { color: #005cc5 } /* Name.Constant */
-.nd { color: #6f42c1 } /* Name.Decorator */
-.ni { color: #005cc5 } /* Name.Entity */
-.ne { color: #005cc5 } /* Name.Exception */
-.nf { color: #6f42c1 } /* Name.Function */
-.nl { color: #005cc5 } /* Name.Label */
-.nn { color: #6f42c1 } /* Name.Namespace */
-.nt { color: #22863a } /* Name.Tag */
-.nv { color: #24292e } /* Name.Variable */
-.ow { color: #d73a49; } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mb { color: #005cc5 } /* Literal.Number.Bin */
-.mf { color: #005cc5 } /* Literal.Number.Float */
-.mh { color: #005cc5 } /* Literal.Number.Hex */
-.mi { color: #005cc5 } /* Literal.Number.Integer */
-.mo { color: #005cc5 } /* Literal.Number.Oct */
-.sa { color: #d73a49 } /* Literal.String.Affix */
-.sb { color: #032f62 } /* Literal.String.Backtick */
-.sc { color: #032f62 } /* Literal.String.Char */
-.dl { color: #d73a49 } /* Literal.String.Delimiter */
-.sd { color: #032f62 } /* Literal.String.Doc */
-.s2 { color: #032f62 } /* Literal.String.Double */
-.se { color: #032f62 } /* Literal.String.Escape */
-.sh { color: #032f62 } /* Literal.String.Heredoc */
-.si { color: #005cc5 } /* Literal.String.Interpol */
-.sx { color: #032f62 } /* Literal.String.Other */
-.sr { color: #032f62 } /* Literal.String.Regex */
-.s1 { color: #032f62 } /* Literal.String.Single */
-.ss { color: #005cc5 } /* Literal.String.Symbol */
-.bp { color: #005cc5 } /* Name.Builtin.Pseudo */
-.fm { color: #005cc5 } /* Name.Function.Magic */
-.vc { color: #24292e } /* Name.Variable.Class */
-.vg { color: #24292e } /* Name.Variable.Global */
-.vi { color: #24292e } /* Name.Variable.Instance */
-.vm { color: #005cc5 } /* Name.Variable.Magic */
-.il { color: #005cc5 } /* Literal.Number.Integer.Long */
+.highlight table td { padding: 5px; }
+.highlight table pre { margin: 0; }
+.highlight .cm {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .cp {
+  color: #999999;
+  font-weight: bold;
+}
+.highlight .c1 {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .cs {
+  color: #999999;
+  font-weight: bold;
+  font-style: italic;
+}
+.highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd;
+}
+.highlight .ge {
+  color: #000000;
+  font-style: italic;
+}
+.highlight .gr {
+  color: #aa0000;
+}
+.highlight .gh {
+  color: #999999;
+}
+.highlight .gi {
+  color: #000000;
+  background-color: #ddffdd;
+}
+.highlight .go {
+  color: #888888;
+}
+.highlight .gp {
+  color: #555555;
+}
+.highlight .gs {
+  font-weight: bold;
+}
+.highlight .gu {
+  color: #aaaaaa;
+}
+.highlight .gt {
+  color: #aa0000;
+}
+.highlight .kc {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kd {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kn {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kp {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kr {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kt {
+  color: #445588;
+  font-weight: bold;
+}
+.highlight .k, .highlight .kv {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .mf {
+  color: #009999;
+}
+.highlight .mh {
+  color: #009999;
+}
+.highlight .il {
+  color: #009999;
+}
+.highlight .mi {
+  color: #009999;
+}
+.highlight .mo {
+  color: #009999;
+}
+.highlight .m, .highlight .mb, .highlight .mx {
+  color: #009999;
+}
+.highlight .sa {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .sb {
+  color: #d14;
+}
+.highlight .sc {
+  color: #d14;
+}
+.highlight .sd {
+  color: #d14;
+}
+.highlight .s2 {
+  color: #d14;
+}
+.highlight .se {
+  color: #d14;
+}
+.highlight .sh {
+  color: #d14;
+}
+.highlight .si {
+  color: #d14;
+}
+.highlight .sx {
+  color: #d14;
+}
+.highlight .sr {
+  color: #009926;
+}
+.highlight .s1 {
+  color: #d14;
+}
+.highlight .ss {
+  color: #990073;
+}
+.highlight .s, .highlight .dl {
+  color: #d14;
+}
+.highlight .na {
+  color: #008080;
+}
+.highlight .bp {
+  color: #999999;
+}
+.highlight .nb {
+  color: #0086B3;
+}
+.highlight .nc {
+  color: #445588;
+  font-weight: bold;
+}
+.highlight .no {
+  color: #008080;
+}
+.highlight .nd {
+  color: #3c5d5d;
+  font-weight: bold;
+}
+.highlight .ni {
+  color: #800080;
+}
+.highlight .ne {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nf, .highlight .fm {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nl {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nn {
+  color: #555555;
+}
+.highlight .nt {
+  color: #000080;
+}
+.highlight .vc {
+  color: #008080;
+}
+.highlight .vg {
+  color: #008080;
+}
+.highlight .vi {
+  color: #008080;
+}
+.highlight .nv, .highlight .vm {
+  color: #008080;
+}
+.highlight .ow {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .o {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .w {
+  color: #bbbbbb;
+}
+.highlight {
+  background-color: #f8f8f8;
+}
