--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight { padding: .2rem .2rem .2rem .2rem; }
+.highlight { padding: 5px; }
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
