--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,4 +1,3 @@
-.highlight { padding: 5px; }
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
@@ -211,4 +210,5 @@
 }
 .highlight {
   background-color: #f8f8f8;
+  padding: 8px !important;
 }
