change syntax css

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,7 +10,7 @@ $padding-x-small: 3% !default;
 
 // Brand colours
 $brand-color: #fff !default;
-$background-color: #fff !default;
+$background-color: #000 !default;
 $border-color: rgba(0, 0, 0, 0.1) !default; // rgba recommended if using feature images
 
 // Typography colours
