--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,4 +52,9 @@
 		ga('send', 'pageview');
 	</script>
 	{% endif %}
+
+	<!-- Google AdSense -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733659383103857"
+			crossorigin="anonymous"></script>
+
 </head>
