--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -212,3 +212,7 @@
   background-color: #f8f8f8;
   padding: .05em .5em;
 }
+code.language-plaintext .highlighter-rouge {
+  background-color: #bbbbbb;
+  padding: .05em .5em;
+}
