--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -212,7 +212,8 @@
   background-color: #f8f8f8;
   padding: .05em .5em;
 }
-code.language-plaintext .highlighter-rouge {
+
+.language-plaintext .highlighter-rouge {
   background-color: #bbbbbb;
-  padding: .05em .5em;
+  padding: .2px;
 }
