--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -72,7 +72,7 @@ td {
 th {
   vertical-align: bottom;
 }
-code .language-plaintext .highlighter-rouge {
+.language-plaintext .highlighter-rouge code {
   background-color: #f8f8f8;
   color: #1ABC9C;
   padding: .2px;
