--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -72,10 +72,8 @@ td {
 th {
   vertical-align: bottom;
 }
-.language-plaintext .highlighter-rouge code {
-  background-color: #f8f8f8;
+code {
   color: #1ABC9C;
-  padding: .2px;
 }
 table,
 dl,
