--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -74,6 +74,8 @@ th {
 }
 code.language-plaintext.highlighter-rouge {
   color: #1ABC9C;
+  background-color: #f8f8f8;
+  padding: 3px;
 }
 table,
 dl,
