--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -74,8 +74,8 @@ th {
 }
 code.language-plaintext.highlighter-rouge {
   color: #1ABC9C;
-  background-color: #f8f8f8;
-  padding: 3px;
+  background-color: #383838;
+  padding: 2px;
 }
 table,
 dl,
