--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -73,10 +73,10 @@ th {
   vertical-align: bottom;
 }
 code.language-plaintext.highlighter-rouge {
-  border-radius: 25px;
+  border-radius: 3px;
   color: #1ABC9C;
-  background: #d0d0d0;
-  padding: 3px;
+  background: #f1f3f5;
+  padding: 1px 3px;
 }
 table,
 dl,
