--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,4 +57,14 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733659383103857"
 			crossorigin="anonymous"></script>
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WV8QBFVPXJ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-WV8QBFVPXJ');
+	</script>
+
 </head>
